dung-creating dump API for overview information, this step requires database set up + a time series database + the actual inference step from an AI model, thus dump data is used for API, create the API documentation in /static/swagger.yaml, run python app.py and access server/static/swagger.yaml for API documentation
